# kanakkadhigaram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  USECASES.md  pyproject.toml
kanakkadhigaram/: __init__.py
kanakkadhigaram/alaviyal/: __init__.py  dhaanam_alavai.py  edai_alavai.py  ezhuthanikku_alavu_arithal.py  kaal_kanakku.py  kaala_alavu_arithal.py  kozh_alavu.py  mugathal_alavai_arithal.py  naazhigai_vattil.py  neer_kanaku.py  neettal_alavai.py  niraiyalavu_mughathal_alavu.py
kanakkadhigaram/andaviyal/: __init__.py  anda_adukugal.py  nakshatra_time_mapping.py  prabhanja_amaippu.py  prabhanja_kaala_amaipu.py  uzhaga_alavu.py  yugam_conversions.py  yugam_saka_kali_calculation.py
kanakkadhigaram/enn_arithal/: __init__.py  enn_perukkam.py  muzhu_en_ilakkanam.py  nenaitha_ilakkam_solludhal.py  padiyadi_ilakkam_sum.py  paribasha_kannakku.py  pinna_alavaigal.py  sevidu_en_alavai.py  thogai_en_arithal.py  vayathu_kooral.py  vichala_pirappu.py
kanakkadhigaram/nilam/: __init__.py  adikolkanakku.py  ambuvil_nilam_kanakkugal.py  chathuram_nilam_alavu.py  karnam_vatta_nila_kootam.py  nilam_alavai.py  nilam_parappu.py  nilam_vigitha_alavugal.py  nilavalam_arithal.py  nilla_varai_kootam.py  nillakanakku_maatrangal.py  ozhungatra_vadiva_nilam.py  panguvilakkam.py  perungol_alathal_1.py  perungol_alathal_2.py  sirukuzhi_alathal.py  vatta_nila_murai.py  vattam_kanakku.py  vattam_vithai_nila_kootam.py
kanakkadhigaram/porul_alavai/: __init__.py  kadal_uppu_alavai.py  kattidam_alavaigal.py  porul_maa_maatruthal.py  vennkalam_pithalai_seythal.py
kanakkadhigaram/vaniga_kanakku/: __init__.py  kall_kannaku.py  ponn.py
kanakkadhigaram/vivasaya_kanakku/: _init__.py  arisi.py  nell.py  pala_sulai_kanakku.py  pusani_vidai_kanakku.py
tests/: test_alaviyal.py  test_andaviyal.py  test_enn_arithal.py  test_nilam.py  test_porul_alavai.py  test_vaniga_kanakku.py  test_vivasaya_kanakku.py
